APPNAME-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $APPNAME-ingress
  labels:
    app: $APPNAME
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: elasticproxy.<icp-proxy>
    http:
      paths:
      - path: /
        backend:
         serviceName: $APPNAME-service
         servicePort: 4433
  # if, alternatively, you want to terminate tls here in the ingress instead of the elasticproxy process, use this: 
  #tls:
  # - hosts:
  #   - elasticproxy.<icp-proxy>
  #   secretName: front-ingress-2
